--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" />
     <title>my_portfolio</title>
+    
 </head>
 <body>
     <!--  -->
@@ -14,7 +15,8 @@
 <!--  -->
 <div class="subHeading">
 <p>
-    I am studying at GAT 
+    I am studying at Global Academy of Technology. I am doing a course 
+    in computer science engineering.
 </p>
 </div>
 </html>
